# Moonshot-Project

./: .gitignore  Overview_Moonshot_Project.md  README.md
.../Ideas/: AuroraBeat.md  VetApp.md
.../VetApp/Specifications/: Functional_Specification.md
Archive/: MVPDefinition.md  Moonshot_DJs.md
Archive/Ideas/: AI_Model_Interface_Creator.md  DecentralizedSocialMediaApp.md
Archive/JOYSO/OtherDocuments/: AudiencePersonaDocument.md  CompetitiveAnalysisReport.md  ObjectiveDocument.md
Archive/JOYSO/OtherDocuments/Management/: JOYSOcheckUp.md  PlanningDevelopment.md
DecentralizedSocialMediaApp/Dev/Frontend/: package.json
DecentralizedSocialMediaApp/Dev/Frontend/public/: index.html
DecentralizedSocialMediaApp/Dev/Frontend/src/: App.js
DecentralizedSocialMediaApp/Dev/backend/: package-lock.json  package.json  server.js
DecentralizedSocialMediaApp/Dev/backend/models/: User.js
DecentralizedSocialMediaApp/Dev/programs/: Cargo.toml
DecentralizedSocialMediaApp/Dev/programs/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
DecentralizedSocialMediaApp/Dev2/: package-lock.json  package.json  server.ts
DecentralizedSocialMediaApp/Dev2/public/: index.html  script.js  styles.css
DecentralizedSocialMediaApp/Docs/: Functional_specification.md
DecentralizedSocialMediaApp/OtherDocuments/: Roadmap.md
DecentralizedSocialMediaApp/Specifications/: FunctionalSpecification.md  Functional_specification.md
Documents/: Functional_Specification.md  Report.md
Ideas/: AI_Model_Interface_Creator.md
Project/: Moonshot_DJs.md
Project/Specifications/: FunctionalSpecification.md
backend/: CMakeLists.txt
backend/db/: DatabaseMigrationGuide.md  migrate.sh  roles.sql  schema.sql
backend/db/migrations/: 001_roles.sql  002_tables.sql  003_permissions.sql  004_policies.sql  005_seed_data.sql
backend/db/old_sql_backup/: init.sql  permissions.sql  policies.sql  schema.sql  seed.sql
backend/src/: main.cpp
backend/src/assets/data/: lessons.json
backend/src/models/: lesson_model.h  page_model.h
backend/src/routes/: audio_routes.h  completion_routes.h  lesson_routes.h  page_routes.h  performance_routes.h  progress_routes.h  reward_routes.h  user_routes.h
backend/src/services/: audio_service.cpp  audio_service.h  db_service.cpp  db_service.h  lesson_service.cpp  lesson_service.h
database/: schema.sql  seed.sql
dj_learning_app/: .flutter-plugins  .flutter-plugins-dependencies  README.md  hex.txt  pubspec.yaml
dj_learning_app/.dart_tool/: package_config.json  package_config_subset
dj_learning_app/.dart_tool/dartpad/: web_plugin_registrant.dart
dj_learning_app/.dart_tool/extension_discovery/: vs_code.json
dj_learning_app/.dart_tool/flutter_build/: dart_plugin_registrant.dart
dj_learning_app/.dart_tool/flutter_build/db9512a573d1c6ac6269c69ef48464ce/: .filecache  debug_ios_bundle_flutter_assets.stamp  debug_universal_framework.stamp  debug_unpack_ios.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  kernel_snapshot.stamp  kernel_snapshot_native_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  native_assets.d  native_assets.stamp  outputs.json
dj_learning_app/android/: local.properties
dj_learning_app/android/app/: build.gradle
dj_learning_app/ios/.symlinks/plugins/: audio_session  flutter_secure_storage  just_audio  path_provider_foundation  shared_preferences_foundation
dj_learning_app/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
dj_learning_app/ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
dj_learning_app/ios/Runner.xcodeproj/: project.pbxproj
dj_learning_app/lib/: main.dart
dj_learning_app/lib/core/constants/: colors.dart
dj_learning_app/lib/core/models/: lesson.dart
dj_learning_app/lib/core/navigation/: route_observer.dart
dj_learning_app/lib/core/theme/: app_text_styles.dart  app_theme.dart
dj_learning_app/lib/presentation/screens/: main_scaffold.dart
dj_learning_app/lib/services/: auth_service.dart  lesson_service.dart  progress_service.dart
dj_learning_app/linux/: CMakeLists.txt
dj_learning_app/linux/runner/: my_application.cc
dj_learning_app/macos/Flutter/: GeneratedPluginRegistrant.swift
dj_learning_app/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
dj_learning_app/macos/Runner.xcodeproj/: project.pbxproj
dj_learning_app/macos/Runner/Configs/: AppInfo.xcconfig
dj_learning_app/test/: widget_test.dart
dj_learning_app/web/: index.html  manifest.json
dj_learning_app/windows/: CMakeLists.txt
dj_learning_app/windows/runner/: Runner.rc  main.cpp
(+33 files in other folders)
