[package]
name = "None"
version = "0.1.0"
authors = ["Rémy CHARLES <remy.charles@algosup.com>"]
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.17" # This version number might change. Check the latest version when you start your project.
thiserror = "1.0" # For error handling

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"

[build-dependencies]
solana-sdk = "1.17"

[features]
default = []
test-bpf = []
